--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,3 +1,5 @@
 {
-    "clangd.semanticHighlighting": "true"
+    "clangd.semanticHighlighting": "true",
+    "clangd.path": "/Users/alex/.config/coc/extensions/coc-clangd-data/install/10.0.0/clangd_10.0.0/bin/clangd",
+    "python.pythonPath": "python3"
 }
