:pencil: change kitty config

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,15 +1,17 @@
-font_family      JetBrains Mono
-italic_font      auto
-bold_font        auto
-bold_italic_font auto
+font_family      JetBrainsMono Nerd Font
+italic_font      JetBrainsMono Nerd Font Italic
+bold_font        JetBrainsMono Nerd Font Bold
+bold_italic_font JetBrainsMono Nerd Font Italic Bold
+macos_thicken_font 0.7
 
-font_size        14.0
+font_size        12.0
 
 cursor_shape     block
 cursor_blink_interval     0.5
 cursor_stop_blinking_after 15.0
+background_opacity 1.0
 
-scrollback_lines 2000
+scrollback_lines -1
 
 # Program with which to view scrollback in a new window. The scrollback buffer is passed as
 # STDIN to this program. If you change it, make sure the program you use can
@@ -61,7 +63,7 @@ input_delay 3
 visual_bell_duration 0.0
 
 # Enable/disable the audio bell. Useful in environments that require silence.
-enable_audio_bell yes
+enable_audio_bell no
 
 # The modifier keys to press when clicking with the mouse on URLs to open the URL
 open_url_modifiers ctrl+shift
@@ -74,9 +76,9 @@ open_url_with default
 term xterm-kitty
 
 # The width (in pts) of window borders. Will be rounded to the nearest number of pixels based on screen resolution.
-window_border_width 1
+window_border_width 0
 
-window_margin_width 5
+window_margin_width 0
 
 # Clipboard
 map super+v             paste_from_clipboard
@@ -153,4 +155,4 @@ macos_titlebar_color background
 
 allow_remote_control yes
 
-include ./ayu.conf
+include ./tokyo-night.conf
