:pencil: update kitty config

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -9,7 +9,7 @@ font_size        12.0
 cursor_shape     block
 cursor_blink_interval     0.5
 cursor_stop_blinking_after 15.0
-background_opacity 0.95
+background_opacity 1
 
 scrollback_lines -1
 
@@ -155,4 +155,4 @@ macos_titlebar_color background
 
 allow_remote_control yes
 
-include ./dracula.conf
+include ./tokyo-night.conf
