--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -20,6 +20,7 @@ font:
   use_thin_strokes: true
 
   normal:
+    #family: MesloLGS Nerd Font
     family: Iosevka Nerd Font
 
   size: 16.0
@@ -41,7 +42,7 @@ bell:
   duration: 0
   color: '0xffffff'
 
-background_opacity: 0.95
+background_opacity: 1.0
 
 mouse_bindings:
   - { mouse: Middle, action: PasteSelection }
@@ -77,4 +78,4 @@ debug:
   ref_test: false
 
 import:
-  - /Users/alex/.config/alacritty/base16-material-palenight-256.yml
+  - /Users/alex/.config/alacritty/spaceduck.yml
