add nonicons font

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -10,9 +10,11 @@ italic_font      JetBrainsMono Nerd Font
 bold_font        JetBrainsMono Nerd Font
 bold_italic_font JetBrainsMono Nerd Font
 
+symbol_map U+f101-U+f208 nonicons
+
 macos_thicken_font 0.5
 
-font_size 13.0
+font_size 12.0
 
 cursor_shape     block
 cursor_blink_interval     0.5
