upadate terminal font

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,11 +1,16 @@
-font_family      JetBrainsMono Nerd Font
-italic_font      JetBrainsMono Nerd Font
-bold_font        JetBrainsMono Nerd Font
-bold_italic_font JetBrainsMono Nerd Font
+font_family      Iosevka
+italic_font      Iosevka
+bold_font        Iosevka
+bold_italic_font Iosevka
+
+#font_family      JetBrainsMono Nerd Font
+#italic_font      JetBrainsMono Nerd Font
+#bold_font        JetBrainsMono Nerd Font
+#bold_italic_font JetBrainsMono Nerd Font
 
 macos_thicken_font 0.5
 
-font_size 13.0
+font_size 14.0
 
 cursor_shape     block
 cursor_blink_interval     0.5
