update theme for kitty

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,16 +1,16 @@
-font_family      Iosevka
-italic_font      Iosevka
-bold_font        Iosevka
-bold_italic_font Iosevka
+# font_family      GoMono Nerd Font
+# italic_font      GoMono Nerd Font
+# bold_font        GoMono Nerd Font
+# bold_italic_font GoMono Nerd Font
 
-#font_family      JetBrainsMono Nerd Font
-#italic_font      JetBrainsMono Nerd Font
-#bold_font        JetBrainsMono Nerd Font
-#bold_italic_font JetBrainsMono Nerd Font
+font_family      JetBrainsMono Nerd Font
+italic_font      JetBrainsMono Nerd Font
+bold_font        JetBrainsMono Nerd Font
+bold_italic_font JetBrainsMono Nerd Font
 
 macos_thicken_font 0.5
 
-font_size 14.0
+font_size 13.0
 
 cursor_shape     block
 cursor_blink_interval     0.5
@@ -106,4 +106,4 @@ macos_titlebar_color background
 
 allow_remote_control yes
 
-include ./tokyonight_storm.conf
+include ./gruvbox-dark.conf
