--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,16 +1,11 @@
-# font_family      GoMono Nerd Font
-# italic_font      GoMono Nerd Font
-# bold_font        GoMono Nerd Font
-# bold_italic_font GoMono Nerd Font
-
-font_family      JetBrainsMono Nerd Font
-italic_font      JetBrainsMono Nerd Font
-bold_font        JetBrainsMono Nerd Font
-bold_italic_font JetBrainsMono Nerd Font
+font_family      Cascadia Code
+italic_font      Cascadia Code
+bold_font        Cascadia Code
+bold_italic_font Cascadia Code
 
 macos_thicken_font 0.5
 
-font_size 13.0
+font_size 14.0
 
 cursor_shape     block
 cursor_blink_interval     0.5
@@ -106,4 +101,4 @@ macos_titlebar_color background
 
 allow_remote_control yes
 
-include ./gruvbox-dark.conf
+include ./kanagawa.conf
