--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -1,16 +1,16 @@
 set -g default-terminal "screen-256color"
 
-# Основной префикс
+# Main prefix
 set -g prefix C-a
 
-# Сортировка по имени
+# Name sorting
 bind s choose-tree -sZ -O name
 
-# Изменение индексов
+# Index changing
 set -g base-index 1
 setw -g pane-base-index 1
 
-# Переназначение клавиш
+# Mappings
 unbind %
 bind | split-window -h 
 
@@ -35,19 +35,34 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection 
 
 unbind -T copy-mode-vi MouseDragEnd1Pane
-# Плагины
+
+# Statusline settings
+set -g status-interval 2
+set -g status-justify centre
+set -g status-style fg=white,bg=black
+
+set -g status-left " #[fg=yellow, bg=default] #S  #[fg=green, bg=default]󰽟 #H"
+set -g status-left-length 50
+
+set -g status-right  "#[fg=white, bg=default] #(top -l 2 | grep -E "^CPU" | tail -1 | awk '{ print $3 + $5 }')%%  "
+set -ga status-right "#[fg=white, bg=default] #(echo \"scale = 2; $(top -l 2 | grep -E "^Phys" | tail -1 | awk '{ print (substr($4, 2, length($4)-2) + substr($6, 1, length($6)-1)) }') / 1024\" | bc)/"
+set -ga status-right "#(expr $(sysctl -n hw.memsize) / $((1024**3)))GB  "
+set -ga status-right "#[fg=blue,bg=default] %H:%M  #[fg=blue, bg=default] %e%b%Y "
+set -g status-right-length 50
+
+set -g window-status-format "#[fg=default, bg=default]#(echo #I | awk '{ if ($1 == 1) {print \"¹\"} else if ($1 == 2) {print \"²\"} else if ($1 == 3) {print \"³\"} else if ($1 == 4) {print \"⁴\"} else if ($1 == 5) {print \"⁵\"} else if ($1 == 6) {print \"⁶\"} else if ($1 == 7) {print \"⁷\"} else if ($1 == 8) {print \"⁸\"} else if ($1 == 9) {print \"⁹\"} }')#W"
+set -g window-status-current-format "#[fg=green, bg=default, bold]#(echo #I | awk '{ if ($1 == 1) {print \"¹\"} else if ($1 == 2) {print \"²\"} else if ($1 == 3) {print \"³\"} else if ($1 == 4) {print \"⁴\"} else if ($1 == 5) {print \"⁵\"} else if ($1 == 6) {print \"⁶\"} else if ($1 == 7) {print \"⁷\"} else if ($1 == 8) {print \"⁸\"} else if ($1 == 9) {print \"⁹\"} }')#W"
+
+# Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'jimeh/tmux-themepack'
-set -g @plugin 'tmux-plugins/tmux-resurrect' 
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
-
-set -g @themepack 'powerline/block/purple'
 
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 
-# Старт менеджера плагинов
+# Start plugin manager
 run '~/.tmux/plugins/tpm/tpm'
