--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -50,8 +50,8 @@ set -ga status-right "#(expr $(sysctl -n hw.memsize) / $((1024**3)))GB  "
 set -ga status-right "#[fg=blue,bg=default] %H:%M  #[fg=blue, bg=default] %e%b%Y "
 set -g status-right-length 50
 
-set -g window-status-format "#[fg=default, bg=default]#(echo #I | awk '{ if ($1 == 1) {print \"¹\"} else if ($1 == 2) {print \"²\"} else if ($1 == 3) {print \"³\"} else if ($1 == 4) {print \"⁴\"} else if ($1 == 5) {print \"⁵\"} else if ($1 == 6) {print \"⁶\"} else if ($1 == 7) {print \"⁷\"} else if ($1 == 8) {print \"⁸\"} else if ($1 == 9) {print \"⁹\"} }')#W"
-set -g window-status-current-format "#[fg=green, bg=default, bold]#(echo #I | awk '{ if ($1 == 1) {print \"¹\"} else if ($1 == 2) {print \"²\"} else if ($1 == 3) {print \"³\"} else if ($1 == 4) {print \"⁴\"} else if ($1 == 5) {print \"⁵\"} else if ($1 == 6) {print \"⁶\"} else if ($1 == 7) {print \"⁷\"} else if ($1 == 8) {print \"⁸\"} else if ($1 == 9) {print \"⁹\"} }')#W"
+set -g window-status-format "#[fg=default, bg=default] #I:#W "
+set -g window-status-current-format "#[fg=black, bg=green, bold] #I:#W "
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
