--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -44,14 +44,14 @@ set -g status-style fg=white,bg=black
 set -g status-left " #[fg=yellow, bg=default] #S  #[fg=green, bg=default]󰽟 #H"
 set -g status-left-length 50
 
-set -g status-right  "#[fg=white, bg=default] #(top -l 2 | grep -E "^CPU" | tail -1 | awk '{ print $3 + $5 }')%%  "
-set -ga status-right "#[fg=white, bg=default] #(echo \"scale = 2; $(top -l 2 | grep -E "^Phys" | tail -1 | awk '{ print (substr($4, 2, length($4)-2) + substr($6, 1, length($6)-1)) }') / 1024\" | bc)/"
+set -g status-right  "#[default] #(top -l 2 | grep -E "^CPU" | tail -1 | awk '{ print $3 + $5 }')%%  "
+set -ga status-right "#[default] #(echo \"scale = 2; $(top -l 2 | grep -E "^Phys" | tail -1 | awk '{ print (substr($4, 2, length($4)-2) + substr($6, 1, length($6)-1)) }') / 1024\" | bc)/"
 set -ga status-right "#(expr $(sysctl -n hw.memsize) / $((1024**3)))GB  "
 set -ga status-right "#[fg=blue,bg=default] %H:%M  #[fg=blue, bg=default] %e%b%Y "
 set -g status-right-length 50
 
-set -g window-status-format "#[fg=default, bg=default] #I:#W "
-set -g window-status-current-format "#[fg=black, bg=green, bold] #I:#W "
+set -g window-status-format "#[fg=default, bg=default] #I󰅂#W "
+set -g window-status-current-format "#[fg=black, bg=green, bold] #I󰅂#W "
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
