--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -1,4 +1,8 @@
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
+
+# support undercul in iTerm2 and friends                                                                                                                                                                                                 
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'                                                                                                                                                                                       
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  
 
 # Main prefix
 set -g prefix C-a
