--- a/terminal/kitty/kitty.conf
+++ b/terminal/kitty/kitty.conf
@@ -1,11 +1,11 @@
-font_family      Cascadia Code
-italic_font      Cascadia Code
-bold_font        Cascadia Code
-bold_italic_font Cascadia Code
+font_family      JetBrainsMono Nerd Font
+italic_font      JetBrainsMono Nerd Font
+bold_font        JetBrainsMono Nerd Font
+bold_italic_font JetBrainsMono Nerd Font
 
-macos_thicken_font 0.5
+macos_thicken_font 0.2
 
-font_size 14.0
+font_size 18.0
 
 cursor_shape     block
 cursor_blink_interval     0.5
@@ -101,4 +101,4 @@ macos_titlebar_color background
 
 allow_remote_control yes
 
-include ./kanagawa.conf
+include ./mocha.conf
