--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -1,8 +1,8 @@
 set -g default-terminal "xterm-256color"
 
-# support undercul in iTerm2 and friends                                                                                                                                                                                                 
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'                                                                                                                                                                                       
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  
+# support undercurl
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
 # Main prefix
 set -g prefix C-a
@@ -42,21 +42,21 @@ unbind -T copy-mode-vi MouseDragEnd1Pane
 
 # Statusline settings
 set -g status-interval 2
-set -g status-justify centre
+set -g status-justify left
 set -g status-style fg=white,bg=black
 
-set -g status-left " #[fg=yellow, bg=default] #S  #[fg=green, bg=default]󰽟 #h  "
-set -ga status-left "#{?client_prefix,#[default], }  "
-set -g status-left-length 50
+set -g status-left ""
 
-set -g status-right  "#[default] #(top -l 2 | grep -E "^CPU" | tail -1 | awk '{ print $3 + $5 }')%%  "
+set -g status-right  "#{?client_prefix,#[default], }  "
+set -ga status-right "#[fg=yellow, bg=default] #S  "
+set -ga status-right "#[default] #(top -l 2 | grep -E "^CPU" | tail -1 | awk '{ print $3 + $5 }')%%  "
 set -ga status-right "#[default] #(echo \"scale = 2; $(top -l 2 | grep -E "^Phys" | tail -1 | awk '{ print (substr($4, 2, length($4)-2) + substr($6, 1, length($6)-1)) }') / 1024\" | bc)/"
-set -ga status-right "#(expr $(sysctl -n hw.memsize) / $((1024**3)))GB  "
-set -ga status-right "#[fg=blue,bg=default] %H:%M  #[fg=blue, bg=default] %e%b "
-set -g status-right-length 50
+set -ga status-right "#(expr $(sysctl -n hw.memsize) / $((1024**3)))GB "
+set -g status-right-length 100
 
-set -g window-status-format "#[fg=default, bg=default] #I󰅂#W "
-set -g window-status-current-format "#[fg=black, bg=green, bold] #I󰅂#W "
+set -g window-status-format "#[fg=black, bg=blue] #I #[fg=default, bg=#1e1e2e] #W "
+set -g window-status-current-format "#[fg=black, bg=green, bold] #I #[fg=default, bg=#1e1e2e, bold] #W "
+set -g window-status-separator ''
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
