feat(tmux): stats bar style

--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal "xterm-256color"
+set -g default-terminal "xterm-kitty"
 
 # support undercurl
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
@@ -48,14 +48,15 @@ set -g status-style fg=white,bg=black
 set -g status-left ""
 
 set -g status-right  "#{?client_prefix,#[default], }  "
-set -ga status-right "#[fg=yellow, bg=default] #S  "
-set -ga status-right "#[default] #(top -l 2 | grep -E "^CPU" | tail -1 | awk '{ print $3 + $5 }')%%  "
-set -ga status-right "#[default] #(echo \"scale = 2; $(top -l 2 | grep -E "^Phys" | tail -1 | awk '{ print (substr($4, 2, length($4)-2) + substr($6, 1, length($6)-1)) }') / 1024\" | bc)/"
+set -ga status-right "#[fg=yellow, bg=black]#[fg=black, bg=yellow] #[fg=yellow, bg=#1e1e2e] #S "
+set -ga status-right "#[fg=cyan, bg=#1e1e2e]#[fg=black, bg=cyan] #[fg=cyan, bg=#1e1e2e] #(top -l 2 | grep -E "^CPU" | tail -1 | awk '{ print $3 + $5 }')%% "
+set -ga status-right "#[fg=orange, bg=#1e1e2e]#[fg=black, bg=orange] #[fg=orange, bg=#1e1e2e] #(echo \"scale = 2; $(top -l 2 | grep -E "^Phys" | tail -1 | awk '{ print (substr($4, 2, length($4)-2) + substr($6, 1, length($6)-1)) }') / 1024\" | bc)/"
 set -ga status-right "#(expr $(sysctl -n hw.memsize) / $((1024**3)))GB "
+
 set -g status-right-length 100
 
 set -g window-status-format "#[fg=black, bg=blue] #I #[fg=default, bg=#1e1e2e] #W "
-set -g window-status-current-format "#[fg=black, bg=green, bold] #I #[fg=default, bg=#1e1e2e, bold] #W "
+set -g window-status-current-format "#[fg=black, bg=green, bold] #I #[fg=default, bg=#1e1e2e] #W "
 set -g window-status-separator ''
 
 # Plugins
