--- a/terminal/kitty/kitty.conf
+++ b/terminal/kitty/kitty.conf
@@ -1,7 +1,7 @@
-font_family      JetBrainsMono Nerd Font
-italic_font      JetBrainsMono Nerd Font
-bold_font        JetBrainsMono Nerd Font
-bold_italic_font JetBrainsMono Nerd Font
+font_family      Liga SFMono Nerd Font
+italic_font      Liga SFMono Nerd Font
+bold_font        Liga SFMono Nerd Font
+bold_italic_font Liga SFMono Nerd Font
 
 macos_thicken_font 0.2
 
