--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -56,7 +56,7 @@ set -ga status-right "#(expr $(sysctl -n hw.memsize) / $((1024**3)))GB "
 set -g status-right-length 100
 
 set -g window-status-format "#[fg=black, bg=blue] #I #[fg=default, bg=#1e1e1e] #W "
-set -g window-status-current-format "#[fg=black, bg=green, bold] #I #[fg=default, bg=#1e1e1e] #W "
+set -g window-status-current-format "#[fg=black, bg=green] #I #[fg=default, bg=#1e1e1e] #W "
 set -g window-status-separator ''
 
 # Plugins
