--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal "xterm-kitty"
+set -g default-terminal "xterm-256color"
 
 # support undercurl
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
