--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -1,8 +1,12 @@
 set -g default-terminal "xterm-256color"
 
 # support undercurl
+set -ga terminal-overrides ",xterm-256color:Tc"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+
+# fix problems with esc delay
+set -sg escape-time 0
 
 # Main prefix
 set -g prefix C-a
