--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal "xterm-256color"
+set -g default-terminal "wezterm"
 
 # support undercurl
 set -ga terminal-overrides ",xterm-256color:Tc"
