feat(terminal): change tmux key symbol

--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -51,7 +51,7 @@ set -g status-style fg=white,bg=black
 
 set -g status-left ""
 
-set -g status-right  "#{?client_prefix,#[default], }  "
+set -g status-right  "#{?client_prefix,#[default], }  "
 set -ga status-right "#[fg=yellow, bg=black]#[fg=black, bg=yellow] #[fg=yellow, bg=#1e1e1e] #S "
 set -ga status-right "#[fg=cyan, bg=#1e1e1e]#[fg=black, bg=cyan] #[fg=cyan, bg=#1e1e1e] #(top -l 2 | grep -E "^CPU" | tail -1 | awk '{ print $3 + $5 }')%% "
 set -ga status-right "#[fg=magenta, bg=#1e1e1e]#[fg=black, bg=magenta] #[fg=magenta, bg=#1e1e1e] #(echo \"scale = 2; $(top -l 2 | grep -E "^Phys" | tail -1 | awk '{ print (substr($4, 2, length($4)-2) + substr($6, 1, length($6)-1)) }') / 1024\" | bc)/"
