--- a/window_manager/.yabairc
+++ b/window_manager/.yabairc
@@ -1,10 +1,12 @@
 #!/usr/bin/env sh
 
+yabai -m signal --add event=dock_did_restart action="sudo yabai --load-sa"
+sudo yabai --load-sa
+
 # global settings
 yabai -m config mouse_follows_focus          off
 yabai -m config focus_follows_mouse          off
 yabai -m config window_placement             second_child
-yabai -m config window_topmost               off
 yabai -m config window_opacity               off
 yabai -m config window_shadow                on
 yabai -m config active_window_opacity        1.0
@@ -16,7 +18,7 @@ yabai -m config mouse_action1                move
 yabai -m config mouse_action2                resize
 
 # general space settings
-# yabai -m config external_bar all:28:0
+yabai -m config external_bar all:36:0
 yabai -m config layout                       bsp
 yabai -m config top_padding                  10
 yabai -m config bottom_padding               10
