feat(tmux): add bold to window counter

--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -59,8 +59,8 @@ set -ga status-right "#(expr $(sysctl -n hw.memsize) / $((1024**3)))GB "
 
 set -g status-right-length 100
 
-set -g window-status-format "#[fg=black, bg=blue] #I #[fg=default, bg=#1e1e1e] #W "
-set -g window-status-current-format "#[fg=black, bg=green] #I #[fg=default, bg=#1e1e1e] #W "
+set -g window-status-format "#[fg=black, bold bg=blue] #I #[fg=default, bg=#1e1e1e] #W "
+set -g window-status-current-format "#[fg=black, bold, bg=green] #I #[fg=default, bg=#1e1e1e] #W "
 set -g window-status-separator ''
 
 # Plugins
