--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -46,21 +46,21 @@ unbind -T copy-mode-vi MouseDragEnd1Pane
 
 # Statusline settings
 set -g status-interval 2
-set -g status-justify left
-set -g status-style fg=white,bg=black
+set -g status-justify centre
+set -g status-style fg=white,bg=#232634
 
-set -g status-left ""
+set -g status-left "#[fg=yellow]  #S "
+set -g status-left-length 100
 
 set -g status-right  "#{?client_prefix,#[default], }  "
-set -ga status-right "#[fg=yellow, bg=black]#[fg=black, bg=yellow] #[fg=yellow, bg=#1e1e1e] #S "
-set -ga status-right "#[fg=cyan, bg=#1e1e1e]#[fg=black, bg=cyan] #[fg=cyan, bg=#1e1e1e] #(top -l 2 | grep -E "^CPU" | tail -1 | awk '{ print $3 + $5 }')%% "
-set -ga status-right "#[fg=magenta, bg=#1e1e1e]#[fg=black, bg=magenta] #[fg=magenta, bg=#1e1e1e] #(echo \"scale = 2; $(top -l 2 | grep -E "^Phys" | tail -1 | awk '{ print (substr($4, 2, length($4)-2) + substr($6, 1, length($6)-1)) }') / 1024\" | bc)/"
-set -ga status-right "#(expr $(sysctl -n hw.memsize) / $((1024**3)))GB "
+set -ga status-right "#[fg=cyan] #(top -l 2 | grep -E "^CPU" | tail -1 | awk '{ print $3 + $5 }')%%  "
+set -ga status-right "#[fg=magenta] #(echo \"scale = 2; $(top -l 2 | grep -E "^Phys" | tail -1 | awk '{ print (substr($4, 2, length($4)-2) + substr($6, 1, length($6)-1)) }') / 1024\" | bc)/"
+set -ga status-right "#(expr $(sysctl -n hw.memsize) / $((1024**3)))GB #[fg=default, bg=default]"
 
 set -g status-right-length 100
 
-set -g window-status-format "#[fg=black, bold bg=blue] #I #[fg=default, bg=#1e1e1e] #W "
-set -g window-status-current-format "#[fg=black, bold, bg=green] #I #[fg=default, bg=#1e1e1e] #W "
+set -g window-status-format "#[fg=green, bg=default] #I #[fg=default]#W "
+set -g window-status-current-format "#[fg=#232634, bg=green] #I #W "
 set -g window-status-separator ''
 
 # Plugins
