feat(terminal): update colorscheme

--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -47,7 +47,7 @@ unbind -T copy-mode-vi MouseDragEnd1Pane
 # Statusline settings
 set -g status-interval 2
 set -g status-justify centre
-set -g status-style fg=white,bg=#232634
+set -g status-style fg=white,bg=black
 
 set -g status-left "#[fg=yellow]  #S "
 set -g status-left-length 100
@@ -60,7 +60,7 @@ set -ga status-right "#(expr $(sysctl -n hw.memsize) / $((1024**3)))GB #[fg=defa
 set -g status-right-length 100
 
 set -g window-status-format "#[fg=green, bg=default] #I #[fg=default]#W "
-set -g window-status-current-format "#[fg=#232634, bg=green] #I #W "
+set -g window-status-current-format "#[fg=black, bg=green] #I #W "
 set -g window-status-separator ''
 
 # Plugins
