feat(terminal): update colorscheme

--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -47,9 +47,9 @@ unbind -T copy-mode-vi MouseDragEnd1Pane
 # Statusline settings
 set -g status-interval 2
 set -g status-justify centre
-set -g status-style fg=white,bg=black
+set -g status-style "fg=#cdcdcd,bg=#1c1c24"
 
-set -g status-left "#[fg=yellow]  #S "
+set -g status-left "#[fg=cyan]  #S "
 set -g status-left-length 100
 
 set -g status-right  "#{?client_prefix,#[default], }  "
@@ -59,8 +59,8 @@ set -ga status-right "#(expr $(sysctl -n hw.memsize) / $((1024**3)))GB #[fg=defa
 
 set -g status-right-length 100
 
-set -g window-status-format "#[fg=green, bg=default] #I #[fg=default]#W "
-set -g window-status-current-format "#[fg=black, bg=green] #I #W "
+set -g window-status-format "#[fg=yellow, bg=default] #I #[fg=default]#W "
+set -g window-status-current-format "#[fg=black, bg=yellow] #I #W "
 set -g window-status-separator ''
 
 # Plugins
